<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".vms.CreateEmployeeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/company"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:startIconDrawable="@drawable/custom_name_company_icon">

        <AutoCompleteTextView
            android:id="@+id/autoTextCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/all_company" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editFName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="12dp"
        android:hint="@string/hint_firstName_employee"
        android:background="@drawable/custom_input"
        android:inputType="text"
        android:drawableStart="@drawable/custom_firstname_icon"
        android:drawablePadding="12dp" />

    <EditText
        android:id="@+id/editLName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="12dp"
        android:hint="@string/hint_secondName_employee"
        android:background="@drawable/custom_input"
        android:inputType="text"
        android:drawableStart="@drawable/custom_lastname_icon"
        android:drawablePadding="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="22sp"
        android:text="@string/all_employee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_employee"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:text="@string/add_employee"
        android:background="@drawable/custom_button"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>