<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical"
    android:background="#E6E6FA"
    tools:context=".vms.CreateCompanyFragment" >

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="12dp"
        android:hint="@string/hint_company"
        android:background="@drawable/custom_input"
        android:inputType="text"
        android:drawableStart="@drawable/custom_name_company_icon"
        android:drawablePadding="12dp" />

    <EditText
        android:id="@+id/editAdress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="12dp"
        android:hint="@string/hint_adress"
        android:background="@drawable/custom_input"
        android:inputType="text"
        android:drawableStart="@drawable/custom_location_icon"
        android:drawablePadding="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="22sp"
        android:text="@string/all_company" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_company"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:text="@string/add_company"
        android:background="@drawable/custom_button"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

</LinearLayout>