<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:padding="6dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azure"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:text="@string/employee_text"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:textColor="@color/dark_gray"/>

                <TextView
                    android:id="@+id/tv_employee_fn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="Microsoft"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/dim_gray"/>

                <TextView
                    android:id="@+id/tv_employee_ln"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Microsoft"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/dim_gray"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:text="@string/company_text"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:textColor="@color/dark_gray"/>
                <TextView
                    android:id="@+id/tv_employee_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Аркадия Иванова 22"
                    android:textSize="16sp"
                    android:textColor="@color/dim_gray"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:text="@string/address_text"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:textColor="@color/dark_gray"/>
                <TextView
                    android:id="@+id/tv_company_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Аркадия Иванова 22"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:textColor="@color/dark_gray"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>